<resources>
    <string name="app_name">Inventory App</string>
    <string name="product_peice">Product Peice :</string>
    <string name="product_name">Product Name :</string>
    <string name="product_quantity">Product Quantity :</string>
    <string name="supplier_name">Supplier Name :</string>
    <string name="supplier_phone">Supplier Phone :</string>
    <string name="quantity">quantity</string>
    <string name="price">price</string>
    <string name="name">name</string>
</resources>
